--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,12 @@ FORMULA_DBNAME=
 FORMULA_USERNAME=
 FORMULA_PASSWORD=
 
+KANBAN_HOST=
+KANBAN_PORT=
+KANBAN_DBNAME=
+KANBAN_USERNAME=
+KANBAN_PASSWORD=
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
