update: print document, tag

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,10 @@ KANBAN_DBNAME=
 KANBAN_USERNAME=
 KANBAN_PASSWORD=
 
+JASPER_SERVERVER=http://
+JASPER_USER=
+JASPER_PASSWORD=
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
