update: save mom glref

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,12 @@ KANBAN_DBNAME=
 KANBAN_USERNAME=
 KANBAN_PASSWORD=
 
+ITC_WMS_HOST=
+ITC_WMS_PORT=
+ITC_WMS_DBNAME=
+ITC_WMS_USERNAME=
+ITC_WMS_PASSWORD=
+
 JASPER_SERVERVER=http://
 JASPER_USER=
 JASPER_PASSWORD=
