--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.14",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "select2": "^4.1.0-rc.0"
     }
 }
